[Phone/detail phone] Implement Doc API
