# src/Actions/API/Phones/ShowPhone.php
@@ -14,9 +14,12 @@ declare(strict_types=1);
 namespace App\Actions\API\Phones;
 
 use App\Actions\API\AbstractApiAction;
+use App\Domain\Common\Exceptions\ValidatorException;
 use App\Domain\Phones\ShowPhone\Loader;
 use App\Domain\Phones\ShowPhone\RequestResolver;
 use App\Responders\JsonResponder;
+use Nelmio\ApiDocBundle\Annotation\Security;
+use Swagger\Annotations as SWG;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\Routing\Annotation\Route;
@@ -50,7 +53,45 @@ class ShowPhone extends AbstractApiAction
     }
 
     /**
+     * Show detail for a given phone
+     *
      * @Route("/phones/{id}", name="show_one", methods={"GET"})
+     *
+     * @param Request $request
+     *
+     * @return Response
+     *
+     * @throws ValidatorException
+     * @throws \ReflectionException
+     *
+     * @SWG\Parameter(
+     *     in="path",
+     *     name="id",
+     *     type="string",
+     *     description="Phone id targeted",
+     *     required=true
+     * )
+     * @SWG\Response(
+     *     response="200",
+     *     description="Successfull obtain phone detail",
+     *     ref="#/definitions/PhoneDetailOutput"
+     * )
+     * @SWG\Response(
+     *     response="401",
+     *     description="Unauthorized. Please login",
+     *     @SWG\Schema(
+     *         ref="#/definitions/JwtErrorOutput"
+     * )
+     * )
+     * @SWG\Response(
+     *     response="404",
+     *     description="Phone not found",
+     *     @SWG\Schema(
+     *         ref="#/definitions/HttpErrorOutput"
+     * )
+     * )
+     * @SWG\Tag(name="Phone")
+     * @Security(name="Bearer")
      */
     public function show(Request $request)
     {
